<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_unit_instructions"
        android:paddingBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerDialogCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUnitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit_name_hint"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etUnitFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit_factor_hint"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"/>

</LinearLayout>
